framework MVC with connect to MongoDB

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "dependencies": {
 	"mongoose": "2.x.x",
-	"express": "2.x.x"
-  }
+	"express": "2.x.x",
+	"hooks": "0.1.9",
+	"mongodb": "0.9.7-3-5"
+  } ,
+  "main": "./index.js"
 }
