--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"hooks": "0.1.9",
 	"mongodb": "0.9.7-3-5",
     "request": "2.x.x",
-    "sesh": "0.1.0"
+    "sesh": "0.1.0",
+    "async" : "0.1.x"
   } ,
   "main": "./index.js"
 }
