--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "sesh": "0.1.0",
     "async" : "0.x.x"
   } ,
+  "engines": {
+    "node": "0.6.x",
+    "npm":  "1.1.x"
+  },
   "main": "./index.js"
 }
