--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "async" : "0.x.x"
   } ,
   "engines": {
-    "node": "0.4.12",
+    "node": "0.x.x",
     "npm":  "1.1.x"
   },
   "main": "./index.js"
